--- a/Codigo/Frota/FrotaWeb/Views/Fornecedor/Index.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Fornecedor/Index.cshtml
@@ -34,9 +34,7 @@
                     <th class="column-10">
                         @Html.DisplayNameFor(model => model.Estado)
                     </th>
-                    <th class="column-15">
-                        Actions
-                    </th>
+                    <th class="column-15"></th>
                 </tr>
             </thead>
             <tbody>
