--- a/Codigo/Frota/FrotaWeb/Views/MarcaVeiculo/Index.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/MarcaVeiculo/Index.cshtml
@@ -1,14 +1,23 @@
 ﻿@model IEnumerable<FrotaWeb.Models.MarcaVeiculoViewModel>
 
-<link rel="stylesheet" href="~/css/form.css" asp-append-version="true" />
+<link rel="stylesheet" href="~/css/index-pages.css" asp-append-version="true" />
 
-<main class="container mt-4">
+<main class="main_content container">
+    <div class="titulo-pagina">
+        <a href="javascript:history.back()" class="voltar">
+            <i class="fa fa-arrow-left"></i> Voltar
+        </a>
+        <h1>Marcas de Veículos</h1>
+        <div class="acoes">
+            <a asp-action="Create" class="btn btn-primario">Criar</a>
+        </div>
+    </div>
     <div class="table-responsive">
-        <table class="table tabela-listra table-hover table-bordered">
+        <table class="tabela">
             <thead>
                 <tr>
                     <th>@Html.DisplayNameFor(model => model.Nome)</th>
-                    <th></th>
+                    <th class="column-15"></th>
                 </tr>
             </thead>
             <tbody id="tableBody">
@@ -31,8 +40,5 @@
                 }
             </tbody>
         </table>
-    </div>
-    <div>
-        <a asp-action="Create" class="btn btn-primary">Adicionar</a>
     </div>
 </main>
