--- a/Codigo/Frota/FrotaWeb/Views/Pessoa/Index.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Pessoa/Index.cshtml
@@ -1,17 +1,26 @@
 ﻿@model IEnumerable<FrotaWeb.Models.PessoaViewModel>
 
-<link rel="stylesheet" href="~/css/form.css" asp-append-version="true" />
+<link rel="stylesheet" href="~/css/index-pages.css" asp-append-version="true" />
 
-<main class="container mt-4">
-	<div class="table-responsive">
-		<table class="table tabela-listra table-hover table-bordered">
+<main class="main_content container">
+    <div class="titulo-pagina">
+        <a href="javascript:history.back()" class="voltar">
+            <i class="fa fa-arrow-left"></i> Voltar
+        </a>
+        <h1>Condutores</h1>
+        <div class="acoes">
+            <a asp-action="Create" class="btn btn-primario">Criar</a>
+        </div>
+    </div>
+    <div class="table-responsive">
+        <table class="tabela">
 			<thead>
 				<tr>
 					<th>@Html.DisplayNameFor(model => model.Nome)</th>
 					<th>@Html.DisplayNameFor(model => model.Cpf)</th>
 					<th>@Html.DisplayNameFor(model => model.Estado)</th>
 					<th>@Html.DisplayNameFor(model => model.Ativo)</th>
-					<th></th>
+					<th class="column-15"></th>
 				</tr>
 			</thead>
 			<tbody id="tableBody">
@@ -36,9 +45,6 @@
 					</tr>
 				}
 			</tbody>
-		</table>
-	</div>
-	<div>
-		<a asp-action="Create" class="btn btn-primary">Adicionar</a>
-	</div>
+        </table>
+    </div>
 </main>
