--- a/Codigo/Frota/FrotaWeb/Views/Vistoria/Index.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Vistoria/Index.cshtml
@@ -1,17 +1,26 @@
 ﻿@model IEnumerable<FrotaWeb.Models.VistoriaViewModel>
 
-<link rel="stylesheet" href="~/css/form.css" asp-append-version="true" />
+<link rel="stylesheet" href="~/css/index-pages.css" asp-append-version="true" />
 
-<main class="container mt-4">
+<main class="main_content container">
+    <div class="titulo-pagina">
+        <a href="javascript:history.back()" class="voltar">
+            <i class="fa fa-arrow-left"></i> Voltar
+        </a>
+        <h1>Vistorias</h1>
+        <div class="acoes">
+            <a asp-action="Create" class="btn btn-primario">Criar</a>
+        </div>
+    </div>
     <div class="table-responsive">
-        <table class="table tabela-listra table-hover table-bordered">
+        <table class="tabela">
             <thead>
                 <tr>
                     <th>@Html.DisplayNameFor(model => model.Data)</th>
                     <th>@Html.DisplayNameFor(model => model.Problemas)</th>
                     <th>@Html.DisplayNameFor(model => model.Tipo)</th>
                     <th>@Html.DisplayNameFor(model => model.IdPessoaResponsavel)</th>
-                    <th></th>
+                    <th class="column-15"></th>
                 </tr>
             </thead>
             <tbody id="tableBody">
@@ -37,8 +46,5 @@
                 }
             </tbody>
         </table>
-    </div>
-    <div>
-        <a asp-action="Create" class="btn btn-primary">Adicionar</a>
     </div>
 </main>
