Finalizada a estilização e padronização das telas de index de todos os cadastros, close #138

--- a/Codigo/Frota/FrotaWeb/Views/Frota/Index.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Frota/Index.cshtml
@@ -84,13 +84,13 @@
                             @Html.DisplayFor(modelItem => item.Estado)
                         </td>
                         <td>
-                            <a href="@Url.Action("Edit", "Frota", new { id = item.Id })" class="edit" title="Editar" data-toggle="tooltip">
+                            <a href="@Url.Action("Edit", "Frota", new { id = item.Id })" class="edit icone" title="Editar" data-toggle="tooltip">
                                 <i class="fa fa-pencil-alt cor" aria-hidden="true"></i>
                             </a>
-                            <a href="@Url.Action("Details", "Frota", new { id = item.Id })" class="details" title="Detalhes" data-toggle="tooltip">
+                            <a href="@Url.Action("Details", "Frota", new { id = item.Id })" class="details icone" title="Detalhes" data-toggle="tooltip">
                                 <i class="fa fa-eye cor" aria-hidden="true"></i>
                             </a>
-                            <a href="@Url.Action("Delete", "Frota", new { id = item.Id })" class="delete" title="Excluir" data-toggle="tooltip">
+                            <a href="@Url.Action("Delete", "Frota", new { id = item.Id })" class="delete icone" title="Excluir" data-toggle="tooltip">
                                 <i class="fa fa-trash cor" aria-hidden="true"></i>
                             </a>
                         </td>
