--- a/Codigo/Frota/FrotaWeb/Views/Fornecedor/Index.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Fornecedor/Index.cshtml
@@ -60,13 +60,13 @@
                             @Html.DisplayFor(modelItem => item.Estado)
                         </td>
                         <td>
-                            <a href="@Url.Action("Edit", "Fornecedor", new { id = item.Id })" class="edit" title="Editar" data-toggle="tooltip">
+                            <a href="@Url.Action("Edit", "Fornecedor", new { id = item.Id })" class="edit icone" title="Editar" data-toggle="tooltip">
                                 <i class="fa fa-pencil-alt cor" aria-hidden="true"></i>
                             </a>
-                            <a href="@Url.Action("Details", "Fornecedor", new { id = item.Id })" class="details" title="Detalhes" data-toggle="tooltip">
+                            <a href="@Url.Action("Details", "Fornecedor", new { id = item.Id })" class="details icone" title="Detalhes" data-toggle="tooltip">
                                 <i class="fa fa-eye cor" aria-hidden="true"></i>
                             </a>
-                            <a href="@Url.Action("Delete", "Fornecedor", new { id = item.Id })" class="delete" title="Excluir" data-toggle="tooltip">
+                            <a href="@Url.Action("Delete", "Fornecedor", new { id = item.Id })" class="delete icone" title="Excluir" data-toggle="tooltip">
                                 <i class="fa fa-trash cor" aria-hidden="true"></i>
                             </a>
                         </td>
