--- a/Codigo/Frota/FrotaWeb/Views/Manutencao/Index.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Manutencao/Index.cshtml
@@ -84,9 +84,15 @@
                             @Html.DisplayFor(modelItem => item.Status)
                         </td>
                         <td>
-                            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                            <a href="@Url.Action("Edit", "Manutencao", new { id = item.Id })" class="edit icone" title="Editar" data-toggle="tooltip">
+                                <i class="fa fa-pencil-alt cor" aria-hidden="true"></i>
+                            </a>
+                            <a href="@Url.Action("Details", "Manutencao", new { id = item.Id })" class="details icone" title="Detalhes" data-toggle="tooltip">
+                                <i class="fa fa-eye cor" aria-hidden="true"></i>
+                            </a>
+                            <a href="@Url.Action("Delete", "Manutencao", new { id = item.Id })" class="delete icone" title="Excluir" data-toggle="tooltip">
+                                <i class="fa fa-trash cor" aria-hidden="true"></i>
+                            </a>
                         </td>
                     </tr>
                 }
