--- a/Codigo/Frota/FrotaWeb/Views/MarcaPecaInsumo/Index.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/MarcaPecaInsumo/Index.cshtml
@@ -16,23 +16,23 @@
         <table class="tabela">
             <thead>
                 <tr>
-                    <th>@Html.DisplayNameFor(model => model.Descricao)</th>
+                    <th class="column-85">@Html.DisplayNameFor(model => model.Descricao)</th>
                     <th class="column-15"></th>
                 </tr>
             </thead>
-            <tbody id="tableBody">
+            <tbody>
                 @foreach (var item in Model)
                 {
                     <tr>
                         <td>@Html.DisplayFor(modelItem => item.Descricao)</td>
                         <td>
-                            <a href="@Url.Action("Edit", "MarcaPecaInsumo", new { id = item.Id })" class="edit" title="Editar" data-toggle="tooltip">
+                            <a href="@Url.Action("Edit", "MarcaPecaInsumo", new { id = item.Id })" class="edit icone" title="Editar" data-toggle="tooltip">
                                 <i class="fa fa-pencil-alt cor" aria-hidden="true"></i>
                             </a>
-                            <a href="@Url.Action("Details", "MarcaPecaInsumo", new { id = item.Id })" class="details" title="Detalhes" data-toggle="tooltip">
+                            <a href="@Url.Action("Details", "MarcaPecaInsumo", new { id = item.Id })" class="details icone" title="Detalhes" data-toggle="tooltip">
                                 <i class="fa fa-eye cor" aria-hidden="true"></i>
                             </a>
-                            <a href="@Url.Action("Delete", "MarcaPecaInsumo", new { id = item.Id })" class="delete" title="Excluir" data-toggle="tooltip">
+                            <a href="@Url.Action("Delete", "MarcaPecaInsumo", new { id = item.Id })" class="delete icone" title="Excluir" data-toggle="tooltip">
                                 <i class="fa fa-trash cor" aria-hidden="true"></i>
                             </a>
                         </td>
