--- a/Codigo/Frota/FrotaWeb/Views/Pessoa/Index.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Pessoa/Index.cshtml
@@ -32,13 +32,13 @@
 						<td>@Html.DisplayFor(modelItem => item.Estado)</td>
 						<td>@Html.DisplayFor(modelItem => item.Ativo)</td>
 						<td>
-							<a href="@Url.Action("Edit", "Pessoa", new { id = item.Id })" class="edit" title="Editar" data-toggle="tooltip">
+							<a href="@Url.Action("Edit", "Pessoa", new { id = item.Id })" class="edit icone" title="Editar" data-toggle="tooltip">
 								<i class="fa fa-pencil-alt cor" aria-hidden="true"></i>
 							</a>
-							<a href="@Url.Action("Details", "Pessoa", new { id = item.Id })" class="details" title="Detalhes" data-toggle="tooltip">
+							<a href="@Url.Action("Details", "Pessoa", new { id = item.Id })" class="details icone" title="Detalhes" data-toggle="tooltip">
 								<i class="fa fa-eye cor" aria-hidden="true"></i>
 							</a>
-							<a href="@Url.Action("Delete", "Pessoa", new { id = item.Id })" class="delete" title="Excluir" data-toggle="tooltip">
+							<a href="@Url.Action("Delete", "Pessoa", new { id = item.Id })" class="delete icone" title="Excluir" data-toggle="tooltip">
 								<i class="fa fa-trash cor" aria-hidden="true"></i>
 							</a>
 						</td>
