--- a/Codigo/Frota/FrotaWeb/Views/ManutencaoPecaInsumo/Edit.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/ManutencaoPecaInsumo/Edit.cshtml
@@ -3,60 +3,62 @@
 <h4>ManutencaoPecaInsumoViewModel</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="IdManutencao" class="control-label"></label>
-                <input asp-for="IdManutencao" class="form-control" />
-                <span asp-validation-for="IdManutencao" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="IdPecaInsumo" class="control-label"></label>
-                <input asp-for="IdPecaInsumo" class="form-control" />
-                <span asp-validation-for="IdPecaInsumo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="IdMarcaPecaInsumo" class="control-label"></label>
-                <input asp-for="IdMarcaPecaInsumo" class="form-control" />
-                <span asp-validation-for="IdMarcaPecaInsumo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Quantidade" class="control-label"></label>
-                <input asp-for="Quantidade" class="form-control" />
-                <span asp-validation-for="Quantidade" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="MesesGarantia" class="control-label"></label>
-                <input asp-for="MesesGarantia" class="form-control" />
-                <span asp-validation-for="MesesGarantia" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="KmGarantia" class="control-label"></label>
-                <input asp-for="KmGarantia" class="form-control" />
-                <span asp-validation-for="KmGarantia" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ValorIndividual" class="control-label"></label>
-                <input asp-for="ValorIndividual" class="form-control" />
-                <span asp-validation-for="ValorIndividual" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Subtotal" class="control-label"></label>
-                <input asp-for="Subtotal" class="form-control" />
-                <span asp-validation-for="Subtotal" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
+	<div class="col-md-4">
+		<form asp-action="Edit">
+			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+			<div class="form-group">
+				<label asp-for="IdManutencao" class="control-label"></label>
+				<input asp-for="IdManutencao" class="form-control" />
+				<span asp-validation-for="IdManutencao" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="IdPecaInsumo" class="control-label"></label>
+				<input asp-for="IdPecaInsumo" class="form-control" />
+				<span asp-validation-for="IdPecaInsumo" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="IdMarcaPecaInsumo" class="control-label"></label>
+				<input asp-for="IdMarcaPecaInsumo" class="form-control" />
+				<span asp-validation-for="IdMarcaPecaInsumo" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="Quantidade" class="control-label"></label>
+				<input asp-for="Quantidade" class="form-control" />
+				<span asp-validation-for="Quantidade" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="MesesGarantia" class="control-label"></label>
+				<input asp-for="MesesGarantia" class="form-control" />
+				<span asp-validation-for="MesesGarantia" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="KmGarantia" class="control-label"></label>
+				<input asp-for="KmGarantia" class="form-control" />
+				<span asp-validation-for="KmGarantia" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="ValorIndividual" class="control-label"></label>
+				<input asp-for="ValorIndividual" class="form-control" />
+				<span asp-validation-for="ValorIndividual" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="Subtotal" class="control-label"></label>
+				<input asp-for="Subtotal" class="form-control" />
+				<span asp-validation-for="Subtotal" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<input type="submit" value="Save" class="btn btn-primary" />
+			</div>
+		</form>
+	</div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+	<a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+	@{
+		await Html.RenderPartialAsync("_ValidationScriptsPartial");
+	}
 }
