--- a/Codigo/Frota/FrotaWeb/Views/ManutencaoPecaInsumo/Index.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/ManutencaoPecaInsumo/Index.cshtml
@@ -3,17 +3,17 @@
 <link rel="stylesheet" href="~/css/index-pages.css" asp-append-version="true" />
 
 <main class="main_content container">
-    <div class="titulo-pagina">
-        <a href="javascript:history.back()" class="voltar">
-            <i class="fa fa-arrow-left"></i> Voltar
-        </a>
-        <h1>Manuteções, Peças e Insumos</h1>
-        <div class="acoes">
-            <a asp-action="Create" class="btn btn-primario">Criar</a>
-        </div>
-    </div>
-    <div class="table-responsive">
-        <table class="tabela">
+	<div class="titulo-pagina">
+		<a href="javascript:history.back()" class="voltar">
+			<i class="fa fa-arrow-left"></i> Voltar
+		</a>
+		<h1>Manuteções, Peças e Insumos</h1>
+		<div class="acoes">
+			<a asp-action="Create" class="btn btn-primario">Criar</a>
+		</div>
+	</div>
+	<div class="table-responsive">
+		<table class="tabela">
 			<thead>
 				<tr>
 					<th>
@@ -72,19 +72,19 @@
 							@Html.DisplayFor(modelItem => item.Subtotal)
 						</td>
 						<td>
-							<a href="@Url.Action("Edit", "ManutencaoPecaInsumo", new { id = item.IdManutencao })" class="edit icone" title="Editar" data-toggle="tooltip">
+							<a href="@Url.Action("Edit", "ManutencaoPecaInsumo", new { idManutencao = item.IdManutencao, idPecaInsumo = item.IdPecaInsumo })" class="edit icone" title="Editar" data-toggle="tooltip">
 								<i class="fa fa-pencil-alt cor" aria-hidden="true"></i>
 							</a>
-							<a href="@Url.Action("Details", "ManutencaoPecaInsumo", new { id = item.IdManutencao })" class="details icone" title="Detalhes" data-toggle="tooltip">
+							<a href="@Url.Action("Details", "ManutencaoPecaInsumo", new { idManutencao = item.IdManutencao, idPecaInsumo = item.IdPecaInsumo })" class="details icone" title="Detalhes" data-toggle="tooltip">
 								<i class="fa fa-eye cor" aria-hidden="true"></i>
 							</a>
-							<a href="@Url.Action("Delete", "ManutencaoPecaInsumo", new { id = item.IdManutencao })" class="delete icone" title="Excluir" data-toggle="tooltip">
+							<a href="@Url.Action("Delete", "ManutencaoPecaInsumo", new { idManutencao = item.IdManutencao, idPecaInsumo = item.IdPecaInsumo })" class="delete icone" title="Excluir" data-toggle="tooltip">
 								<i class="fa fa-trash cor" aria-hidden="true"></i>
 							</a>
 						</td>
 					</tr>
 				}
 			</tbody>
-        </table>
-    </div>
+		</table>
+	</div>
 </main>
